 syntax = "proto3";

 package My.Message;

 import "google/protobuf/timestamp.proto";
 import "google/protobuf/descriptor.proto";
 import "google/protobuf/any.proto";


 extend google.protobuf.MessageOptions {
     MyMessageDeclarativeFields declarative_fields = 50000;
 }
 message MyMessageDeclarativeFields {
     string partition_key_field = 1;
     string schema_version = 2; 
     string message_type = 3;
     string source_system = 4;
 }
